7/13/11 hide clock controls in all modules, this sim has no clock controls
7/12/11 add rudimentary E-field plates
7/12/11 converted to floating control panels
7/11/11 created electronegativity control
7/11/11 created control panels
7/11/11 set up localized strings
7/11/11 created project and set up skeleton